crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__conditions__I113-else-branches.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/conditions/I113-else-branches
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "other\n" [Continue]
> "other\n" [Continue]
> "other\n" [Continue]
> "other\n" [Done]
outcome: Done
