crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__conditions__I115-empty-multiline-conditional-branch.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/conditions/I115-empty-multiline-conditional-branch
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "" [Done]
outcome: Done
