crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__conditions__conditionals.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/conditions/conditionals
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "true\n" [Continue]
> "true\n" [Continue]
> "true\n" [Continue]
> "true\n" [Continue]
> "true\n" [Continue]
> "great\n" [Continue]
> "right?\n" [Done]
outcome: Done
